force-app/main/default/objects/Promotion_Activity__c/fields/Account_Promotional_Budget_Updated__c.field-meta.xml
<CustomField>
    <fullName>Account_Promotional_Budget_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Promotional Budget Updated</label>
    <type>Checkbox</type>
</CustomField>