force-app/main/default/objects/Promotion_Activity__c/fields/Account_Promotional_Target_ROI__c.field-meta.xml
<CustomField>
    <fullName>Account_Promotional_Target_ROI__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Account Promotional Target ROI</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>