force-app/main/default/objects/Promotion_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HZ national</fullName>
            </value>
            <value>
                <fullName>HZ regional</fullName>
            </value>
            <value>
                <fullName>B2B Werbung</fullName>
            </value>
            <value>
                <fullName>Vorverkauf</fullName>
            </value>
            <value>
                <fullName>Mengenabfrage</fullName>
            </value>
            <value>
                <fullName>Zuteilung</fullName>
            </value>
            <value>
                <fullName>Talon</fullName>
            </value>
            <value>
                <fullName>Messe</fullName>
            </value>
            <value>
                <fullName>Aktionsgondel</fullName>
            </value>
            <value>
                <fullName>Aktionspreis</fullName>
            </value>
            <value>
                <fullName>Pakiet zakupowy LCH 7%</fullName>
            </value>
            <value>
                <fullName>Pakiet zakupowy WH</fullName>
            </value>
            <value>
                <fullName>Gazetka LCH</fullName>
            </value>
            <value>
                <fullName>Gazetka HURT</fullName>
            </value>
            <value>
                <fullName>Gazetka PODHURT</fullName>
            </value>
            <value>
                <fullName>Gezetka DETAL</fullName>
            </value>
            <value>
                <fullName>Stand Detal</fullName>
            </value>
            <value>
                <fullName>Stand Pernamentny</fullName>
                <label>Stand Pernamentny LECLERC</label>
            </value>
            <value>
                <fullName>Ekspozycja Platformowa</fullName>
                <label>Ekspozycja Platformowa LECLERC</label>
            </value>
            <value>
                <fullName>Rewitalizacja</fullName>
            </value>
            <value>
                <fullName>Mastershelf</fullName>
            </value>
            <value>
                <fullName>Pakiet odsprzedażowy</fullName>
            </value>
            <value>
                <fullName>Gazetki Sieci Franczyzowe</fullName>
            </value>
            <value>
                <fullName>Wsparcie Sprzedaży Sieci Franczyzowe</fullName>
            </value>
            <value>
                <fullName>Direct Rebate</fullName>
            </value>
            <value>
                <fullName>Coupon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>