force-app/main/default/objects/Promotion_Activity__c/fields/All_Child_Accounts_Included__c.field-meta.xml
<CustomField>
    <fullName>All_Child_Accounts_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Child Accounts Included</label>
    <type>Checkbox</type>
</CustomField>