force-app/main/default/objects/Promotion_Activity__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCM Lump Sum Manual Distribution</fullName>
            </value>
            <value>
                <fullName>CCM Lump Sum with Sales No Period Split</fullName>
            </value>
            <value>
                <fullName>CCM Lump Sum Manual Dist No Period Split</fullName>
            </value>
            <value>
                <fullName>CCM Lump Sum Contract</fullName>
            </value>
            <value>
                <fullName>CCM Parent Contract</fullName>
            </value>
            <value>
                <fullName>CCM Performance Contract</fullName>
            </value>
            <value>
                <fullName>CCM External Lump Sum Contract</fullName>
            </value>
            <value>
                <fullName>CCM External Performance Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>