force-app/main/default/objects/Promotion_Activity__c/fields/Discount_Category__c.field-meta.xml
<CustomField>
    <fullName>Discount_Category__c</fullName>
    <description>The discount category or type of contract that will be mapped to the Contract Type field in CCM</description>
    <label>Discount Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Rebate</fullName>
            </value>
            <value>
                <fullName>Guideline Discounts</fullName>
            </value>
            <value>
                <fullName>Functional Rebate</fullName>
            </value>
            <value>
                <fullName>Performance Rebate</fullName>
            </value>
            <value>
                <fullName>Price Promo H&amp;L</fullName>
            </value>
            <value>
                <fullName>Visibility</fullName>
            </value>
            <value>
                <fullName>Customer Original</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Other Promo</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Logistic</fullName>
            </value>
            <value>
                <fullName>EDLP - Key Selling Period</fullName>
            </value>
            <value>
                <fullName>Customer Admin/Other</fullName>
            </value>
            <value>
                <fullName>Promotional Discount</fullName>
            </value>
            <value>
                <fullName>Visibility - eCommerce</fullName>
            </value>
            <value>
                <fullName>Customer Admin/Other - Performance Contract</fullName>
            </value>
            <value>
                <fullName>Promotional Discount - Performance Contract</fullName>
            </value>
            <value>
                <fullName>Guideline Discounts - External Performance Contract</fullName>
            </value>
            <value>
                <fullName>Promotional Discount - External Performance Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>