force-app/main/default/objects/Promotion_Activity__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>INFOWELDERS</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>