force-app/main/default/objects/Promotion_Activity__c/fields/Is_Length_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Is_Length_in_Years__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Length in Years</label>
    <type>Checkbox</type>
</CustomField>