force-app/main/default/objects/Promotion_Activity__c/fields/Is_Under_Promotional_Target_ROI__c.field-meta.xml
<CustomField>
    <fullName>Is_Under_Promotional_Target_ROI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Under Promotional Target ROI</label>
    <type>Checkbox</type>
</CustomField>