force-app/main/default/objects/Promotion_Activity__c/fields/Length_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Agreement__c</fullName>
    <description>Length of agreement in years</description>
    <label>Length of Agreement</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>