force-app/main/default/objects/Promotion_Activity__c/fields/Limit_to_Selected_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Limit_to_Selected_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this option not auto add any new child accounts that might be created after the Activity (PSA) has been created.</description>
    <label>Limit to Selected Accounts</label>
    <type>Checkbox</type>
</CustomField>