force-app/main/default/objects/Promotion_Activity__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Infowelders</description>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipName>Promotion_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>