force-app/main/default/objects/Promotion_Activity__c/fields/Payment_Configurations__c.field-meta.xml
<CustomField>
    <fullName>Payment_Configurations__c</fullName>
    <description>Comma separated list of when each payment should be made</description>
    <label>Payment Configurations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>