force-app/main/default/objects/Promotion_Activity__c/fields/Percentage_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Visibility__c</fullName>
    <label>Percentage Visibility</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>