force-app/main/default/objects/Promotion_Activity__c/fields/Requires_Special_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Special_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Special Approval</label>
    <type>Checkbox</type>
</CustomField>