force-app/main/default/objects/Promotion_Activity__c/fields/SAP_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Agreement_Number__c</fullName>
    <label>SAP Agreement Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>