force-app/main/default/objects/Promotion_Activity__c/fields/SAP_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>SAP_Calculation_Type__c</fullName>
    <label>SAP Calculation Type</label>
    <length>12</length>
    <type>Text</type>
</CustomField>