force-app/main/default/objects/Promotion_Activity__c/fields/SAP_Condition_P_Unit__c.field-meta.xml
<CustomField>
    <fullName>SAP_Condition_P_Unit__c</fullName>
    <label>SAP Condition P Unit</label>
    <length>12</length>
    <type>Text</type>
</CustomField>