force-app/main/default/objects/Promotion_Activity__c/fields/SAP_Contract_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Contract_Code__c</fullName>
    <label>SAP Contract Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>