force-app/main/default/objects/Promotion_Activity__c/fields/SAP_Field_Combination__c.field-meta.xml
<CustomField>
    <fullName>SAP_Field_Combination__c</fullName>
    <label>SAP Field Combination</label>
    <length>15</length>
    <type>Text</type>
</CustomField>