force-app/main/default/objects/Promotion_Activity__c/fields/SAP_Interface_Error__c.field-meta.xml
<CustomField>
    <fullName>SAP_Interface_Error__c</fullName>
    <label>SAP Interface Error</label>
    <type>TextArea</type>
</CustomField>