force-app/main/default/objects/Promotion_Activity__c/fields/Total_Actual_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Discount__c</fullName>
    <label>Total Actual Discount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>