force-app/main/default/objects/Promotion_Activity__c/fields/Total_Actual_Rebate_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Rebate_Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Actual Rebate Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>