force-app/main/default/objects/Promotion_Activity__c/fields/Total_Actual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Volume__c</fullName>
    <label>Total Actual Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>