force-app/main/default/objects/Promotion_Activity__c/fields/Total_Customer_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Profit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Customer Profit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>