force-app/main/default/objects/Promotion_Activity__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>