force-app/main/default/objects/Promotion_Activity__c/fields/Total_Investment_9L__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment_9L__c</fullName>
    <formula>IF(Total_Volume__c &gt; 0, Total_Investment__c / Total_Volume__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Investment (9L)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>