force-app/main/default/objects/Promotion_Activity__c/fields/Total_Promotional_Activity__c.field-meta.xml
<CustomField>
    <fullName>Total_Promotional_Activity__c</fullName>
    <label>Total Promotional Activity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>