force-app/main/default/objects/Promotion_Activity__c/fields/Total_Rebate_Liability__c.field-meta.xml
<CustomField>
    <fullName>Total_Rebate_Liability__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Rebate Liability</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>