force-app/main/default/objects/Promotion_Activity__c/fields/Total_Return_on_Investment__c.field-meta.xml
<CustomField>
    <fullName>Total_Return_on_Investment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Return on Investment</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>