force-app/main/default/objects/Promotion_Activity__c/fields/Total_Training_and_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Total_Training_and_Advocacy__c</fullName>
    <label>Total Training and Advocacy</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>