force-app/main/default/objects/Promotion_Activity__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Volume</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>