force-app/main/default/objects/Promotion_Activity__c/fields/Wholesaler_Alternate__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Alternate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler Alternate</label>
    <referenceTo>Wholesaler__c</referenceTo>
    <relationshipName>Activities_Wholesaler_Alternate</relationshipName>
    <type>Lookup</type>
</CustomField>