force-app/main/default/objects/Promotion_Activity__c/fields/Wholesaler_Alternate_Name__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Alternate_Name__c</fullName>
    <label>Wholesaler Alternate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>