force-app/main/default/objects/Promotion_Activity__c/fields/Wholesaler_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Preferred__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesaler Preferred</label>
    <referenceTo>Wholesaler__c</referenceTo>
    <relationshipName>Activities_Wholesaler_Preferred</relationshipName>
    <type>Lookup</type>
</CustomField>