force-app/main/default/objects/Promotion_Activity__c/recordTypes/JP_PSA.recordType-meta.xml
<RecordType>
    <fullName>JP_PSA</fullName>
    <active>true</active>
    <description>Japan PSA</description>
    <label>JP - PSA</label>
</RecordType>